fix-scrollbars
Made-with: Cursor

--- a/assets/css/embed-editor.css
+++ b/assets/css/embed-editor.css
@@ -1,20 +1,17 @@
 .rve-wrapper {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
     max-width: 800px;
     margin: 0 auto;
 }
 
 .rve-wrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
+    display: block;
     width: 100%;
-    height: 100%;
-}
-
-@supports (aspect-ratio: 16 / 9) {
-    .rve-wrapper iframe {
-        position: static;
-    }
+    height: auto;
+    border: 0;
+    aspect-ratio: inherit;
 }
 
 .rve-notice {
